--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "git": "^0.1.5",
     "gsap": "^3.9.1",
     "moment": "^2.24.0",
